# zet-setup

./: .gitignore  README.md  README.txt  gojo.bat  index.html  kurulum.bat  main.js  ornek.gj  ornek.zt  style.css  zet.bat
runtime/: Cargo.toml  run.zt
runtime/src/: app.rs
