[package]
name = "gojo-runtime"
version = "0.1.0"
edition = "2021"

# 1. KİMLİK: MÜDÜR (DERLEYİCİ)
[[bin]]
name = "gojo-compiler"
path = "src/main.rs"

# 2. KİMLİK: İŞÇİ (SENİN KODUN)
[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3       # Maksimum optimizasyon seviyesi
lto = true          # "Link Time Optimization": Tüm kodu tek parça gibi analiz edip gereksiz her şeyi atar.
codegen-units = 1   # Kod parçalanmaz, tek blokta işlenir (Derleme yavaşlar ama kod uçar).
panic = "abort"     # Hata olunca "neden oldu" diye bakmaz, direkt kapatır (Hız kazandırır).
strip = true        # Dosya boyutunu küçültür.