[package]
name = "zet-runtime"
version = "0.2.0"
edition = "2021"

# Kullanıcının kodu — derleyici tarafından otomatik üretilir
[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3       # Maksimum optimizasyon seviyesi
lto = true          # "Link Time Optimization": Tüm kodu tek parça gibi analiz edip gereksiz her şeyi atar.
codegen-units = 1   # Kod parçalanmaz, tek blokta işlenir (Derleme yavaşlar ama kod uçar).
panic = "abort"     # Hata olunca "neden oldu" diye bakmaz, direkt kapatır (Hız kazandırır).
strip = true        # Dosya boyutunu küçültür.